Refactor declaration of engine builder exclusion.
The API has been refined to declare engine builder type to be excluded in a workflow instead of engine builder id.

Fixes #226

--- a/src/main/asciidoc/advanced-tutorials.adoc
+++ b/src/main/asciidoc/advanced-tutorials.adoc
@@ -105,7 +105,7 @@ So if we want to specify specific engines in a workflow, we have to declare it:
     <workflow-templates>
         <workflow-template id="tpl">
             <without>
-                <engine-builder-id>wuicDefaultMemoryMapCacheEngineBuilder</engine-builder-id>
+                <engine-builder-type>MemoryMapCacheEngineBuilder</engine-builder-type>
             </without>
             <engine-chain>
                 <engine-builder-id>wuicDefaultEhCacheEngineBuilder</engine-builder-id>
