Registers ObjectBuilderInspector beans available in spring context.
Fixes #228

--- a/src/main/asciidoc/more-tutorials.adoc
+++ b/src/main/asciidoc/more-tutorials.adoc
@@ -81,6 +81,7 @@ TIP: you can completely ignore the use of `wuic.xml` or `wuic.json` and configur
 The `WuicFacadeBuilderFactory` actually extracts a pre-configured `WuicFacadeBuilder` initialized by the `WuicServletContextListener` as done in any servlet container.
 The factory brings spring support by injecting to the builder any http://wuic.github.io/apidocs/com/github/wuic/ContextBuilderConfigurator.html[ContextBuilderConfigurator] declared as a bean.
 This means that you can create an `ContextBuilderConfigurator` implementation and annotate it `@Component` to perform custom configuration through `Java Config`.
+For more advanced usage, you can inject as a bean any instance of http://wuic.github.io/apidocs/com/github/wuic/config/ObjectBuilderInspector.html[ObjectBuilderInspector] in order to customize objects created by WUIC.
 
 Finally, just use the handy `WuicHandlerMapping` to inject to spring a bean handling resources with WUIC.
 Core resolvers are `WuicPathResourceResolver`  and `WuicVersionStrategy`, but you can create additional implementations.
