Adds support for profile.
It's now possible to declare in a ContextBuilder a set of activated profiles that are used to filter heaps, dao, filters, engines, templates, workflows, interceptors and configurators to be selected. For configurator and interceptors, a special @Profile annotation has been created to detect what profiles are associated to it. For components configurable via XML or JSON, a new "profile" attribute has been introduced. As usual WuicFacade brings simpler configuration point by reading the 'c.g.wuic.facade.profiles' from the property resolver to configure active profiles. This change also brings clarification for duplicated registrations (same ID). WUIC now detects it and make sure that their is only one registration for a given ID (according to enabled profiles). Support for spring and maven have been also improved to inject their own active profiles in the WUIC context, allowing to ignore profile activation via specific property.

Fixes #202

--- a/src/main/asciidoc/more-tutorials.adoc
+++ b/src/main/asciidoc/more-tutorials.adoc
@@ -103,6 +103,13 @@ For more advanced usage, you can inject as a bean any instance of http://wuic.gi
 Also note that the `WuicFacadeBuilderFactory` injects all spring `PropertySource` in the internal property resolver of WUIC.
 Consequently, you can define any property you usually add to the `wuic.properties` file to a property object managed by spring.
 
+Finally, the `WuicFacadeBuilderFactory` injects to the WUIC context all the spring profiles (usually activated with `spring.profiles.active` property).
+This means that if a registration is restricted with a particular profile, you can use this registration simply by activating this profile through spring;
+
+NOTE: if you want to apply a profile to any `ContextBuilderConfigurator` or `ObjectBuilderInspector` component injected
+by spring, it is recommended to use the `com.github.wuic.Profile` annotation instead of spring `@Profile` annotation.
+Even if the later works, the former allows to activate components on the fly if you activate a profile.
+
 ==== Full example
 
 A full example is available https://github.com/wuic/wuic-samples/tree/wuic-0.5.x-snapshot/spring-sample[here].
