--- a/src/main/asciidoc/api.adoc
+++ b/src/main/asciidoc/api.adoc
@@ -267,7 +267,10 @@ Alternatively in JSON:
 
 Each builder creates a `NutDao` thanks to a set of properties.
 When a factory is created, it is used to build NutDao thanks to a `String` representation of its path.
-Defines an unique ID to be referenced somewhere else. Also declares the class name as a `class` attribute.
+Defines an unique ID to be referenced somewhere else.
+
+When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
 
 Finally, an optional regex attribute could be specified (default value is false).
 If true, the nut names must be a compilable http://docs.oracle.com/javase/1.4.2/docs/api/java/util/regex/Pattern.html[pattern].
@@ -276,7 +279,7 @@ If true, the nut names must be a compilable http://docs.oracle.com/javase/1.4.2/
 ----
 <wuic>
     <nut-dao-builders>
-        <nut-dao-builder id="http-resource-builder" type="HttpNutDaoBuilder">
+        <nut-dao-builder id="http-resource-builder" type="HttpNutDaoBuilder" profiles"foo,bar">
             ...
         <nut-dao-builder>
     </nut-dao-builders>
@@ -291,6 +294,7 @@ Alternatively in JSON:
     "nutDaoBuilders" : [{
         "id" : "http-resource-builder",
         "type" : "HttpNutDaoBuilder"
+        "profiles" : ["foo", "bar"]
     }]
 }
 ----
@@ -327,11 +331,14 @@ Each builder creates a NutFiler thanks to a set of properties. Objects are built
 Defines an unique ID to be referenced somewhere else. Also declares the class name as a `class` attribute.
 When any link:#heap[heap] is built from the context, its paths are previously filtered with all defined filters.
 
+When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+
 [source,xml]
 ----
 <wuic>
     <nut-filter-builders>
-        <nut-filter-builder id="remove-regex-filter-builder" type="RegexRemoveNutFilterBuilder">
+        <nut-filter-builder id="remove-regex-filter-builder" type="RegexRemoveNutFilterBuilder" profiles="foo,bar">
             ...
         <nut-filter-builder>
     </nut-filter-builders>
@@ -345,7 +352,8 @@ Alternatively in JSON:
 {
     "nutFilterBuilders" : [{
         "id" : "remove-regex-filter-builder",
-        "type" : "RegexRemoveNutFilterBuilder"
+        "type" : "RegexRemoveNutFilterBuilder",
+        "profiles" : ["foo", "bar"]
     }]
 }
 ----
@@ -379,11 +387,14 @@ Alternatively in JSON:
 An EngineBuilder is always identified by an unique ID to be referenced somewhere else. Also
 defines the class to be instantiated.
 
+When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+
 [source,xml]
 ----
 <wuic>
    <engine-builders>
-       <engine-builder id="yuicomspressor-js" type="YuiCompressorJavascriptEngineBuilder" />
+       <engine-builder id="yuicomspressor-js" type="YuiCompressorJavascriptEngineBuilder" profiles="foo,bar" />
    </engine-builders>
 </wuic>
 ----
@@ -396,6 +407,7 @@ Alternatively in JSON:
    "engineBuilders" : [{
         "id" : "yuicomspressor-js",
         "type" : "YuiCompressorJavascriptEngineBuilder"
+        "profiles" : ["foo", "bar"]
    }]
 }
 ----
@@ -612,11 +624,14 @@ Alternatively in JSON:
 A heap is identified by an unique ID and must defines a builder to use (`dao-builder-id attribute`).
 The builder is referenced thanks to its ID.
 
+When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+
 [source,xml]
 ----
 <wuic>
     <heaps>
-        <heap id="common-js" dao-builder-id="classPathBuilder">
+        <heap id="common-js" dao-builder-id="classPathBuilder" profiles="foo,bar">
             ...
         </heap>
     </heaps>
@@ -630,7 +645,8 @@ Alternatively in JSON:
 {
     "heaps" : [{
         "id" : "common-js",
-        "daoBuilderId" : "classPathBuilder"
+        "daoBuilderId" : "classPathBuilder",
+        "profiles" : ["foo", "bar"]
     }]
 }
 ----
@@ -737,11 +753,14 @@ The workflow template is declared to contain a list of engines. It is identified
 
 Below, the example shows that a workflow template will be created and identified with `tpl` ID.
 
+When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+
 [source,xml]
 ----
 <wuic>
     <workflow-templates>
-        <workflow-template id="tpl">
+        <workflow-template id="tpl" profiles="foo,bar">
             ...
         </workflow-template>
     </workflow-templates>
@@ -754,7 +773,8 @@ Alternatively in JSON:
 ----
 {
     "workflowTemplates" : [{
-        "id" : "tpl"
+        "id" : "tpl",
+        "profiles" : ["foo", "bar"]
     }]
 }
 ----
@@ -849,6 +869,9 @@ Each heap's name matching the regex will be associated to a workflow identified 
 
 The workflow is always built on top of a template referenced with `workflow-template-id` property.
 
+When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+
 Below, the example shows that a workflow will be created for each heap with a name containing `image` word.
 Those workflows will be named with a string starting with `sprite-`.
 
@@ -856,7 +879,7 @@ Those workflows will be named with a string starting with `sprite-`.
 ----
 <wuic>
     <workflows>
-        <workflow id-prefix="sprite-" workflow-template-id="tpl" heap-id-pattern=".*image" />
+        <workflow id-prefix="sprite-" workflow-template-id="tpl" heap-id-pattern=".*image" profiles="foo,bar" />
     </workflows>
 </wuic>
 ----
@@ -869,7 +892,8 @@ Alternatively in JSON:
     "workflows : [{
         "idPrefix" : "sprite-",
         "workflowTemplateId" : "tpl",
-        "heapIdPattern" : ".*image"
+        "heapIdPattern" : ".*image",
+        "profiles" : ["foo", "bar"]
     }]
 }
 ----
@@ -899,6 +923,57 @@ Alternatively in JSON:
     }]
 }
 ----
+
+== Using profiles
+
+WUIC to segregate parts of your configurations and make it only available in certain environments.
+The main configurable components in WUIC are `NutDao`, `Engine`, `NutFilter`, `Heap`, `Templates` and `Worfklow`.
+
+Any registration can be marked with a profile to limit when it is loaded:
+
+[source,xml]
+----
+<wuic>
+    <workflows>
+        <workflow id="workflow" profiles="my-profile" workflow-template-id="tpl" heap-id-pattern=".*image" />
+    </workflows>
+</wuic>
+----
+
+Alternatively in JSON:
+
+[source,json]
+----
+{
+    "workflows" : [{
+        "id" : "workflow",
+        "workflowTemplateId" : "tpl",
+        "heapIdPattern" : ".*image",
+        "profiles": ["my-profile"]
+    }]
+}
+----
+
+You can use a link:#profiles_prop[property] to specify which profiles are active.
+You can specify the property in any of the usual ways, for example you could include it in your `wuic.properties` file or as a JVM property.
+
+Registrations are always identified with an ID but can share the same value if they have different profiles.
+When a WUIC context is created, registrations are excluded according to activated profiles.
+If there is still more than one applicable registration for a given ID, WUIC will raise an error.
+
+For instance, if `foo` or `bar` profile is enabled, the following configuration is fine:
+
+[source,xml]
+----
+<wuic>
+    <workflows>
+        <workflow id="workflow" profiles="foo" workflow-template-id="tpl1" heap-id-pattern=".*image" />
+        <workflow id="workflow" profiles="bar" workflow-template-id="tpl2" heap-id-pattern=".*image" />
+    </workflows>
+</wuic>
+----
+
+However, if no profile is active or if both `foo` and `bar` profiles are activated, two registrations are identified with `workflow`, which is not accepted.
 
 == Configuring WUIC components
 
@@ -1088,6 +1163,13 @@ include::{wuic-repository}wuic/core/src/test/java/com/github/wuic/test/ctx/Conte
 
 In this example, any created object will be inspected by the inspector if it IS-A `Foo` or `Bar`.
 
+Moreover, you can restrict the execution of any `ObjectBuilderInspector` if you annotate it with `com.github.wuic.Profile` annotation.
+
+[source,java]
+----
+include::{wuic-repository}wuic/core/src/test/java/com/github/wuic/test/ctx/ContextBuilderTest.java[tags=ObiProfile]
+----
+
 == Configuring the web.xml
 
 === Introduction
@@ -1190,6 +1272,11 @@ In the `Parameter name` column bellow, replace the first `*` character from all 
          <td>*.facade.wuicWarmupStrategy</td>
          <td>When a context is built, a warmup strategy could be specified run all known workflows asynchronously (`ASYNC`), synchronously (`SYNC`) or not (`NONE`)</td>
          <td>NONE</td>
+    </tr>
+    <tr>
+         <td id="profiles_prop">*.facade.profiles</td>
+         <td>Activated profiles in WUIC that will be used to filter registrations.</td>
+         <td>Empty String</td>
     </tr>
     <tr>
          <td>*.charset</td>
@@ -1470,6 +1557,13 @@ Note that you can also force a facade to be refreshed with a `ContextBuilderConf
 [source,java]
 ----
 include::{wuic-repository}wuic/core/src/test/java/com/github/wuic/test/ApiTutorial.java[tags=ConfigureAPI]
+----
+
+Moreover, you can restrict the execution of any `ContextBuilderConfigurator` if you annotate it with `com.github.wuic.Profile` annotation.
+
+[source,java]
+----
+include::{wuic-repository}wuic/core/src/test/java/com/github/wuic/test/ctx/ContextBuilderTest.java[tags=CbcProfile]
 ----
 
 === Run a workflow
