--- a/src/main/asciidoc/api.adoc
+++ b/src/main/asciidoc/api.adoc
@@ -270,7 +270,7 @@ When a factory is created, it is used to build NutDao thanks to a `String` repre
 Defines an unique ID to be referenced somewhere else.
 
 When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
-Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `type` attribute.
 
 Finally, an optional regex attribute could be specified (default value is false).
 If true, the nut names must be a compilable http://docs.oracle.com/javase/1.4.2/docs/api/java/util/regex/Pattern.html[pattern].
@@ -328,11 +328,11 @@ Alternatively in JSON:
 ==== nut-filter-builder
 
 Each builder creates a NutFiler thanks to a set of properties. Objects are built thanks to a String representation of its path.
-Defines an unique ID to be referenced somewhere else. Also declares the class name as a `class` attribute.
+Defines an unique ID to be referenced somewhere else. Also declares the class name as a `type` attribute.
 When any link:#heap[heap] is built from the context, its paths are previously filtered with all defined filters.
 
 When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
-Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `type` attribute.
 
 [source,xml]
 ----
@@ -388,7 +388,7 @@ An EngineBuilder is always identified by an unique ID to be referenced somewhere
 defines the class to be instantiated.
 
 When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
-Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `type` attribute.
 
 [source,xml]
 ----
@@ -625,7 +625,7 @@ A heap is identified by an unique ID and must defines a builder to use (`dao-bui
 The builder is referenced thanks to its ID.
 
 When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
-Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `type` attribute.
 
 [source,xml]
 ----
@@ -754,7 +754,7 @@ The workflow template is declared to contain a list of engines. It is identified
 Below, the example shows that a workflow template will be created and identified with `tpl` ID.
 
 When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
-Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `type` attribute.
 
 [source,xml]
 ----
@@ -870,7 +870,7 @@ Each heap's name matching the regex will be associated to a workflow identified 
 The workflow is always built on top of a template referenced with `workflow-template-id` property.
 
 When WUIC link:#profiles_prop[is activated with some profiles], multiple declarations with the same ID are allowed if duplicated registrations can be eliminated.
-Profiles are declared through the `profiles` attribute. Also declares the class name as a `class` attribute.
+Profiles are declared through the `profiles` attribute. Also declares the class name as a `type` attribute.
 
 Below, the example shows that a workflow will be created for each heap with a name containing `image` word.
 Those workflows will be named with a string starting with `sprite-`.
@@ -1021,7 +1021,7 @@ include::{table-repository}com.github.wuic.engine.html[]
 
 There are several ways to access resources:
 
-* inside your webapp (Classpath, WAR, RequestDispatcher)
+* inside your webapp (Classpath, WAR, RequestDispatcher, WebJar)
 * or outside (FTP, HTTP, SSH, etc)
 
 WUIC access provides support for each protocol.
@@ -1049,6 +1049,7 @@ Here are the possible classes for each protocol:
 * RequestDispatcher: `RequestDispatcherNutDaoBuilder` (typically for statics under `src/main/webapp`)
 * Classpath: `ClasspathNutDaoBuilder` (typically for statics under `src/main/resources`)
 * Webapp: `WebappNutDaoBuilder` (typically for statics under `src/main/webapp/WEB-INF` except `src/main/webapp/WEB-INF/lib` which is ignored)
+* WebJar: `WebJarNutDao` (for statics packages inside http://www.webjars.org[webjars] dependencies)
 * HTTP: `HttpNutDaoBuilder`
 * SSH: `SshNutDaoBuilder`
 * FTP: `FtpNutDaoBuilder`
